# bacon-breakaway

./: .gitignore  Cargo.toml  README.md  assets.md  build.sh  index.html  index.scss  server.py
assets/: mainmenu.eml  tiles.xcf
assets/images/: obstacle.xcf  player-anim.xcf  player.xcf
src/: assets.rs  camera.rs  constants.rs  cornstore.rs  debug.rs  finish.rs  gameover.rs  main.rs  mainmenu.rs  map.rs  music.rs  obstacles.rs  player.rs  player_ui.rs  runstats.rs  states.rs  utils.rs
